devient un package

--- a/Runtime/shitstorm._WRTC_.asmdef
+++ b/Runtime/shitstorm._WRTC_.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "_WRTC_",
+    "name": "shitstorm._WRTC_",
     "rootNamespace": "_WRTC_",
     "references": [
         "GUID:ec96f6dc48fee4244bcebc247464e471",
