--- a/Runtime/shitstorm._ARMA_.asmdef
+++ b/Runtime/shitstorm._ARMA_.asmdef
@@ -1,10 +1,11 @@
 {
-    "name": "shitstorm._WRTC_",
-    "rootNamespace": "_WRTC_",
+    "name": "shitstorm._ARMA_",
+    "rootNamespace": "_ARMA_",
     "references": [
         "GUID:ec96f6dc48fee4244bcebc247464e471",
         "GUID:2a84e452762c9634994f1da664544658",
-        "GUID:02bff2b282f91b84680849955c7860bc",
+        "GUID:85d8eb001661017439ab39a2d69b3cd4",
+        "GUID:84fa75d71d64bc04e87c47a81fe0ee9c",
         "GUID:f12aafacab75a87499e7e45c873ffab8",
         "GUID:04376767bc1f3b428aefa3d20743e819"
     ],
